fixing horizontal scroll and general code clean up

--- a/src/css/AboutMe.css
+++ b/src/css/AboutMe.css
@@ -20,11 +20,8 @@
   display: flex;
   align-items: center;
   justify-content: start;
-  column-gap: 16px;
   flex-direction: column;
-  padding: 16px;
   width: 100%;
-  border-radius: 2px;
   color: white;
 }
 
