--- a/src/css/App.css
+++ b/src/css/App.css
@@ -30,5 +30,5 @@ body{
 }
 
 .App {
-  width: 100vw;
+  width: 100%;
 }
