--- a/src/css/Header.css
+++ b/src/css/Header.css
@@ -29,7 +29,7 @@
   color: greenyellow;
   font-size: 16px;
   border: 1px greenyellow solid;
-  padding: 4px;
+  padding: 6px;
   margin: 4px;
   align-self: center;
   transition: 1s;
