--- a/src/css/Projects.css
+++ b/src/css/Projects.css
@@ -17,9 +17,6 @@
   padding: 10% 0;
 }
 
-.HHimg{
-  width: 42vw;
-}
 
 .mainProjects{
   display: flex;
