--- a/src/css/Skills.css
+++ b/src/css/Skills.css
@@ -15,7 +15,6 @@
     justify-content: start;
     column-gap: 16px;
     flex-direction: column;
-    padding: 16px;
     width: 100%;
     border-radius: 2px;
     color: white;
