--- a/src/css/Socials.css
+++ b/src/css/Socials.css
@@ -6,6 +6,5 @@
   width: 100vw;
   bottom: 0;
   position: fixed;
-  padding: 6px
 }
 
